--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -9,10 +9,12 @@ $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #212529;
 $black: #000;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #e83e8c;
-$orange: #fd9814;
+$indigo: #371cd4;
+$purple: #523bb8;
+$pink: #eb46a9;
+$orange: #e6a417;
+$yellow: #f5cc18;
+$blue: #337ab7;
 $teal: #20c997;
 $dark: $gray-800;
 $enable-responsive-font-sizes: true;
@@ -20,4 +22,4 @@ $secondary: $gray-300;
 $enable-hover-media-query: true;
 $enable-shadows: true;
 $link-decoration: none;
-$font-family-sans-serif: Lato, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
