--- a/bootstrap/custom-dark.scss
+++ b/bootstrap/custom-dark.scss
@@ -1,7 +1,7 @@
-// Darkly 5.0.0-beta3
+// Darkly 5.0.0-beta3 <--- needs to be updated, 5.0.0 came out.
 // Bootswatch
 
-@import url('https://fonts.googleapis.com/css2?family=Lato');
+@import url('https://fonts.googleapis.com/css2?family=Roboto');
 
 @mixin btn-shadow($color){
   @include gradient-y-three-colors(lighten($color, 8%), $color, 60%, darken($color, 4%));
