--- a/templates/user.twig
+++ b/templates/user.twig
@@ -2,8 +2,15 @@
 
 {% block title %}User{% endblock %}
 
+	{% block precontent %}
+	<div class="p-5 mb-4 bg-purple" style="margin-top:-20px;">
+	todo: find a way of making this taller and making coloring it possible. please don't do the same mistakes 
+	we did in the poktube semantic ui days, don't position stuff horizontally. maybe try making it more
+	like yt cosmic panda's channel layout.
+	</div>
+	{% endblock %}
 	{% block content %}
-	<div class="row">
+	<div class="row" style="margin-top:-50px;">
 		<div class="col-md-6 col-lg-4">
 			<div class="card">
 				<div class="card-body">
@@ -12,12 +19,24 @@
 					</div>
 					<div class="caption">
 						<h3>{{ user.username }}</h3>
-						<p>Joined {{ user.joined | date('M j, Y') }}</p>
-						<p>database does not have such fields lol</p>
+						<p>Joined {{ user.joined | date('F jS, Y') }}</p>
+						<p>User Description here once we put that in the SQL Database.</p>
 						<p>
 							<a href="#" class="btn btn-warning" role="button">Subscribe</a>  
-							<a href="#"class="btn btn-secondary" role="button">Add friend</a>
+							<a href="#"class="btn btn-secondary" role="button">Friend</a>
 						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6 col-lg-8">
+			<div class="card">
+				<div class="card-body">
+					<div class="caption">
+						<h3>Most recent uploaded video</h3>
+						<h4>Video title</h4>
+						<p>Upload date</p>
+						<p>Description</p>
 					</div>
 				</div>
 			</div>
