Change coloring of warning button on dark theme

--- a/bootstrap/_variables-dark.scss
+++ b/bootstrap/_variables-dark.scss
@@ -24,8 +24,8 @@ $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #e74c3c !default;
-$orange:  #fd7e14 !default;
-$yellow:  #f39c12 !default;
+$orange:  #ed8b13 !default;
+$yellow:  #ffc32b !default;
 $green:   #00bc8c !default;
 $teal:    #20c997 !default;
 $cyan:    #3498db !default;
