--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -24,7 +24,7 @@
 					} else if (data == 2) {
 						$("#bootstrap").attr("href", "scssrender.php?path=bootstrap/bs-dark.scss");
 						$("#navbar").attr("class", "navbar navbar-dark bg-dark navbar-static-top navbar-expand-md");
-						$("#frontJumbo").attr("class", "p-5 mb-4 bg-dark text-white")
+						$("#frontJumbo").attr("class", "p-5 mb-4 bg-purple text-white")
 						Cookies.set("theme", "dark", { expires: 1000 });
 					}
 				});
