improve user page, allow custom header colors

--- a/templates/register.twig
+++ b/templates/register.twig
@@ -17,6 +17,6 @@
 			<input type="password" name="pass1" class="form-control" placeholder="Password">
 			<input type="password" name="pass2" class="form-control" placeholder="Password (Again)">
 		</div>
-		<button type="submit" name="action" class="btn btn-secondary">Submit</button>
+		<button type="submit" name="action" class="btn btn-primary">Submit</button>
 	</form>
 	{% endblock %}
