--- a/templates/login.twig
+++ b/templates/login.twig
@@ -34,13 +34,13 @@
 		</div>
 		<div class="col-4">		<form method="post" name="loginForm"
 		id="loginForm" action="login.php">
-			<div class="input-group"> <span class="input-group-addon" id="basic-addon1" style="width:90px">Username</span>
-				<input
-				type="text" name="username" class="form-control" aria-describedby="basic-addon1">
+			<div class="input-group"> 
+				<span class="input-group-text" id="basic-addon1" style="width:90px">Username</span>
+				<input type="text" name="username" class="form-control" aria-describedby="basic-addon1">
 			</div>
-			<div class="input-group"> <span class="input-group-addon" id="basic-addon1" style="width:90px">Password</span>
-				<input
-				type="password" name="password" class="form-control" aria-describedby="basic-addon1">
+			<div class="input-group"> 
+				<span class="input-group-text" id="basic-addon1" style="width:90px">Password</span>
+				<input type="password" name="password" class="form-control" aria-describedby="basic-addon1">
 			</div>
 			<input class="btn btn-primary" type="submit" value="Login" name="loginsubmit">
 		</form></div>
