add settings page, move theme selector to navbar
todo: add more settings to the setting page.

--- a/templates/user.twig
+++ b/templates/user.twig
@@ -21,7 +21,7 @@
 					<div class="caption">
 						<h3>{{ user.username }}</h3>
 						<p>Joined {{ user.joined | date('F jS, Y') }}</p>
-						<p>User Description here once we put that in the SQL Database.</p>
+						<p>{{ user.description }}</p>
 						<p>
 							<a href="#" class="btn btn-warning" role="button">Subscribe</a>  
 							<a href="#"class="btn btn-secondary" role="button">Friend</a>
