redo profiles a bit + port callouts in a really bad way
callouts should replace alarms (but retain the alarms name) which might cause issues once 5.1/5.0.1 comes out.

though if we ever do a theme that reverts the customizations (basically just vanilla BS5, in all of it's generic Segoe UI glory), we should make alarms look like actual alarms, not callouts.

--- a/bootstrap/custom.scss
+++ b/bootstrap/custom.scss
@@ -175,3 +175,35 @@ $text-shadow: 0 1px 0 rgba(0, 0, 0, 0.05) !default;
 // Progress bars ===============================================================
 
 // Containers ==================================================================
+
+// Callouts ====================================================================
+.callout {
+ padding:1.25rem;
+ margin-top:1.25rem;
+ margin-bottom:1.25rem;
+ border:1px solid #e9ecef;
+ border-left-width:.25rem;
+ border-radius:.25rem;
+ background-color: #ffffff;
+}
+.callout h4 {
+ margin-bottom:.25rem;
+}
+.callout p:last-child {
+ margin-bottom:0;
+}
+.callout code {
+ border-radius:.25rem;
+}
+.callout+.callout {
+ margin-top:-.25rem;
+}
+.callout-info {
+ border-left-color:#5bc0de
+}
+.callout-warning {
+ border-left-color:#f0ad4e
+}
+.callout-danger {
+ border-left-color:#d9534f
+}
