--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -111,5 +111,17 @@
         <div class="container">
 			{% block content %}{% endblock %}
 		</div>
+		<bir>
+<section class="">
+  <!-- Footer -->
+  <footer class="text-center text-white" style="background-color: #0a4275;">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      Chaziz
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
+</section>
     </body>
 </html>
