--- a/templates/index.twig
+++ b/templates/index.twig
@@ -7,7 +7,8 @@
 			<div class="row">
 				<div class="col-xl-10">
 					<h1 class="display-5 fw-bold">Hi there, {{ current_user.username }}</h1>
-					<a href="browse.php" class="btn btn-primary btn-lg">browse &rsaquo;</a>
+					<a href="browse.php" class="btn btn-primary btn-lg">Browse</a>
+					<a href="settings.php" class="btn btn-secondary btn-lg">Edit my profile</a>
 				</div>
 				<div class="col-xl-2 text-right">
 					<img class="img-fluid" src="{{ profile_image(current_user.username) }}" alt="pfp">
@@ -47,7 +48,7 @@
   <path d="M0 2.5A1.5 1.5 0 0 1 1.5 1h11A1.5 1.5 0 0 1 14 2.5v10.528c0 .3-.05.654-.238.972h.738a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 1 1 0v9a1.5 1.5 0 0 1-1.5 1.5H1.497A1.497 1.497 0 0 1 0 13.5v-11zM12 14c.37 0 .654-.211.853-.441.092-.106.147-.279.147-.531V2.5a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0-.5.5v11c0 .278.223.5.497.5H12z"/>
   <path d="M2 3h10v2H2V3zm0 3h4v3H2V6zm0 4h4v1H2v-1zm0 2h4v1H2v-1zm5-6h2v1H7V6zm3 0h2v1h-2V6zM7 8h2v1H7V8zm3 0h2v1h-2V8zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1z"/>
 </svg> Latest News</div>
-					<div class="card-body">We rewrote the site. We also lost the domain. Have fun!</div>
+					<div class="card-body">Welcome to squareBracket!</div>
 				</div>
 			</div>
 		</div>
