--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,7 +1,7 @@
 {% extends "_layout.twig" %} 
 	{% block title %}Home{% endblock%} 
 	{% block precontent %} 
-	<div id="frontJumbo" class="p-5 mb-4 {% if theme == 'dark' %}bg-purple text-white{% else %}bg-purple text-white{% endif %}" style="margin-top:-20px;">
+	<div id="frontJumbo" class="p-5 mb-4 bg-purple text-white" style="margin-top:-20px;">
       <div class="container">
 		{% if logged_in %}
 			<div class="row">
