--- a/templates/components/watchbox.twig
+++ b/templates/components/watchbox.twig
@@ -1,8 +1,7 @@
 <div class="card border-primary">
     <div class="card-body">
         <div class="col-lg-8">
-           	<h3>{{ data.title }}</h3>
-			<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} views &bull; {{ data.time | date('M j, Y') }}</p>
+			<p><small>Uploaded by {{ userlink(data, 'u_') }} on {{ data.time | date('M j, Y') }}  &bull; {{ data.views }} views</small></p>
 			<p>{{ data.description }}</p>
         </div>
     </div>
