--- a/templates/user.twig
+++ b/templates/user.twig
@@ -12,17 +12,7 @@
 	{% endblock %}
 	{% block content %}
 	<div class="row" style="margin-top:-150px;">
-		<div class="alert alert-info">We haven't finished making this vertical.</div>
-		<div class="col-md-6 col-lg-8">
-			<div class="card">
-				<div class="card-body">
-					<div class="caption">
-						<h3>Most recent uploaded video</h3>
-						{{ video_box(latestVideo)}} 
-					</div>
-				</div>
-			</div>
-		</div>
+	<p class="text-white">are you fucking kidding me guys this is literally just the poktube semantic ui profile layout but without the user infomation detail bullshit</p>
 		<div class="p-1 mb-4 col-md-6 col-lg-4 bg-dark rounded-3 text-white">
 			<div class="container-fluid py-5">
 				<div class="row">
@@ -33,6 +23,16 @@
 				<p class="col-md-8 fs-4">{{ user.description }}</p>
 				<button class="btn btn-warning btn-lg" type="button">Subscribe</button>
 				<button class="btn btn-secondary btn-lg" type="button">Friend</button>
+			</div>
+		</div>
+		<div class="col-md-6 col-lg-8">
+			<div class="card">
+				<div class="card-body">
+					<div class="caption">
+						<h3>Most recent uploaded video</h3>
+						{{ video_box(latestVideo)}} 
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
