--- a/templates/components/videobox.twig
+++ b/templates/components/videobox.twig
@@ -1,4 +1,4 @@
-<div class="card border-primary" style="margin-bottom:10px">
+<div class="card" style="margin-bottom:10px">
     <div class="card-body">
         <div class="row">
 			<div class="col-lg-4">
@@ -8,11 +8,14 @@
 					</div>
 				</a>
 			</div>
-            <div class="col-lg-8">
+            <div class="col-lg-6">
                 <h3><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
-				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} views &bull; {{ data.time | relative_time }}</p>
+				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} views</p>
 				<p>{{ data.description|length > 250 ? data.description|slice(0, 250) ~ '...' : data.description }}</p>
             </div>
+			<div class="col-lg-2 text-end">
+			<small class="text-muted">{{ data.time | relative_time }}</small>
+			</div>
         </div>
     </div>
 </div>
