--- a/templates/components/smallvideobox.twig
+++ b/templates/components/smallvideobox.twig
@@ -1,16 +1,16 @@
 <div class="row">
-	<div class="col-lg-6">
+	<div class="col-6">
 		<a href="watch.php?v={{ data.video_id }}">
 			<div class="img-thumbnail" style="margin-bottom:0">
 				<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
 			</div>
 		</a>
 	</div>
-	<div class="col-lg-6">
+	<div class="col-6">
 		<h5><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h5>
 		<p>{{ userlink(data, 'u_') }}</p>
 	</div>
-	<div class="col-lg-12">
+	<div class="col-12">
 		<p>{{ data.views }} views &bull; {{ data.time | relative_time }}</p>
 	</div>
 </div>
