fix oversight in bs5 migration

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -10,7 +10,7 @@
 					<a href="browse.php" class="btn btn-primary btn-lg">Browse</a>
 					<a href="settings.php" class="btn btn-secondary btn-lg">Edit my profile</a>
 				</div>
-				<div class="col-xl-2 text-right">
+				<div class="col-xl-2 text-end">
 					<img class="img-fluid" src="{{ profile_image(current_user.username) }}" alt="pfp">
 				</div>
 			</div>
