Backport updated assets and branding.

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -23,7 +23,10 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">[squareBracket] Milestone 1</a>
+				<a class="navbar-brand" href="/">
+				<img alt="[sb]" src="/assets/logo.png" style="display: inline;" width="20px"></img>
+				squareBracket MS1 Maintained
+				</a>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
