make the button actually do anything

--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -6,7 +6,7 @@
 		<div class="row">
 			<h1>{{ video.title }}</h1>
 			<p>
-			<button class="btn btn-secondary" type="button">[username] (fix it later)</button>
+			{{ userlink(video, 'u_', true, 'btn-secondary') }}
 			<button class="btn btn-warning" type="button">Subscribe</button>
 			</p>
 				<div class="col-lg-9">
