--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,37 +1,11 @@
 {% extends "_layout.twig" %} 
-	{% block title %}Home{% endblock%} 
-	{% block precontent %} 
-	<div id="frontJumbo" class="p-5 mb-4 bg-purple text-white" style="margin-top:-20px;">
-      <div class="container">
-		{% if logged_in %}
-			<div class="row">
-				<div class="col-xl-10">
-					<h1 class="display-5 fw-bold">Hi there, {{ current_user.username }}</h1>
-					<a href="browse.php" class="btn btn-primary btn-lg">Browse</a>
-					<a href="settings.php" class="btn btn-secondary btn-lg">Edit my profile</a>
-				</div>
-				<div class="col-xl-2 text-end">
-					<img class="img-fluid" src="{{ profile_image(current_user.username) }}" alt="pfp">
-				</div>
-			</div>
-		{% else %}
-			<h1 class="display-5 fw-bold">Welcome to squareBracket</h1>
-			<p class="col-xl-8 fs-4">This is like any other video sharing site... for now at least.</p>
-			<p>	<div class="btn-group">
-					<a href="register.php" class="btn btn-primary btn-lg">Get started</a>
-					<a href="login.php" class="btn btn-light btn-lg">Login</a>
-				</div>
-			</p>
-		{% endif %}
-      </div>
-    </div>
-	{% endblock %} 
+	{% block title %}Home{% endblock%}  
 	{% block content %}
 		<div class="row">
 			<div class="col-xl-9">
 				<div class="card-group">
 					<div class="card, col-xl-3">
-					  <div class="card-header">
+					  <div class="card-header bg-dark text-white">
 						{% if logged_in %}
 						<div class="d-grid gap-2">
 							<a href="browse.php" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
