--- a/templates/index.twig
+++ b/templates/index.twig
@@ -44,12 +44,14 @@
 					  </div>
 			{% if logged_in %}
 				<!-- BAD HACK BAD HACK BAD HACK -->
+				<ul class="list-group list-group-flush">
 				<li class="list-group-item" style="height: 1.19%;"><img class="float-start" style="max-width: 50%;" src="{{ profile_image(current_user.username) }}" alt="pfp">
 				<p class="text-end float-end">
 				<a href="#">My profile</a>
 				</p>
 				</li>
 				<li class="list-group-item">From squareBracket</li>
+				</ul>
 			{% else %}
 				You're not logged in
 			{% endif %}
