--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,5 +1,5 @@
 {% extends "_layout.twig" %} 
-	{% block title %}Home{% endblock%}  
+	{% block title %}Home{% endblock%}
 	{% block content %}
 		<div class="row">
 			<div class="col-xl-9">
@@ -13,7 +13,7 @@
 	</svg> Browse Videos</a>
 						</div>
 						{% else %}
-							No login
+							Welcome
 						{% endif %}
 					  </div>
 			{% if logged_in %}
@@ -21,13 +21,19 @@
 				<ul class="list-group list-group-flush">
 				<li class="list-group-item" style="height: 1.19%;"><img class="float-start" style="max-width: 50%;" src="{{ profile_image(current_user.username) }}" alt="pfp">
 				<p class="text-end float-end">
-				<a href="#">My profile</a>
+				<a href="settings.php">Edit my profile</a>
 				</p>
 				</li>
 				<li class="list-group-item">From squareBracket</li>
 				</ul>
 			{% else %}
-				You're not logged in
+				  <ul class="list-group list-group-flush">
+					<li class="list-group-item">This is like any other video sharing site... for now at least.</li>
+				  </ul>
+				   <div class="card-footer">
+					<a href="register.php" class="card-link">Get started</a>
+					<a href="login.php" class="card-link">Login</a>
+				  </div>
 			{% endif %}
 					</div>
 					<div class="card" style="border-left: 0;border-top: 0;">
