Revert "import BS5 2012 branch to localize branch"

--- a/templates/login.twig
+++ b/templates/login.twig
@@ -2,7 +2,7 @@
 	{% block title %}Login{% endblock%} 
 	{% block precontent %}
 	<div class="container">
-	<h1>Login</h1>
+	<h1>Login to squareBracket</h1>
 	</div>
 	{% endblock %}
 	{% block content %}
@@ -23,11 +23,12 @@
 		{% endif %}
 		<div class="row">
 		<div class="col-8">
-		squareBracket is a website to share your videos to the public. With squareBracket you can:
+		<h2>What is squareBracket?</h2>
+		squareBracket is a way to get your videos to the people who matter to you. With squareBracket you can:
 		<ul>
-		<li> Show off your favorite videos to the world.
-		</li><li> Post the videos you take with your camera or smartphone
-		</li><li> Securely show videos to your friends and family around the world
+		<li> Show off your favorite videos to the world
+		</li><li> Blog the videos you take with your digital camera or cell phone
+		</li><li> Securely and privately show videos to your friends and family around the world
 		</li><li> ... and much, much more!
 		</li></ul>
 		</div>
