--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -4,9 +4,9 @@
 
 	{% block content %}
 		<div class="row">
-			<h2>{{ video.title }}</h2>
+			<h1>{{ video.title }}</h1>
 			<p>
-			{{ userlink(video, 'u_', true, 'btn-secondary') }}
+			<button class="btn btn-secondary" type="button">[username] (fix it later)</button>
 			<button class="btn btn-warning" type="button">Subscribe</button>
 			</p>
 				<div class="col-lg-9">
