--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,54 +1,46 @@
 {% extends "_layout.twig" %} 
-	{% block title %}Home{% endblock%}
+	{% block title %}Home{% endblock%} 
+	{% block precontent %} 
+	<div id="frontJumbo" class="p-5 mb-4 bg-purple text-white" style="margin-top:-20px;">
+      <div class="container">
+		{% if logged_in %}
+			<div class="row">
+				<div class="col-xl-10">
+					<h1 class="display-5 fw-bold">Hi there, {{ current_user.username }}</h1>
+					<a href="browse.php" class="btn btn-primary btn-lg">Browse</a>
+					<a href="settings.php" class="btn btn-secondary btn-lg">Edit my profile</a>
+				</div>
+				<div class="col-xl-2 text-end">
+					<img class="img-fluid" src="{{ profile_image(current_user.username) }}" alt="pfp">
+				</div>
+			</div>
+		{% else %}
+			<h1 class="display-5 fw-bold">Welcome to squareBracket</h1>
+			<p class="col-xl-8 fs-4">This is like any other video sharing site... for now at least.</p>
+			<p>	<div class="btn-group">
+					<a href="register.php" class="btn btn-primary btn-lg">Get started</a>
+					<a href="login.php" class="btn btn-light btn-lg">Login</a>
+				</div>
+			</p>
+		{% endif %}
+      </div>
+    </div>
+	{% endblock %} 
 	{% block content %}
 		<div class="row">
-			<div class="col-xl-9">
-				<div class="card-group">
-					<div class="card, col-xl-3">
-					  <div class="card-header bg-dark text-white" style="border-top-right-radius: 0;">
-						{% if logged_in %}
-						<div class="d-grid gap-2">
-							<a href="browse.php" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
-	  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
-	</svg> Browse Videos</a>
-						</div>
+			<div class="col-xl-8">
+				<div class="card">
+					<div class="card-header bg-dark text-white">From squareBracket</div>
+					<div class="card-body">
+						{% for video in videos %} 
+							{{ video_box(video) }} 
 						{% else %}
-							Welcome
-						{% endif %}
-					  </div>
-			{% if logged_in %}
-				<!-- BAD HACK BAD HACK BAD HACK -->
-				<ul class="list-group list-group-flush">
-				<li class="list-group-item" style="height: 1.19%;"><img class="float-start" style="max-width: 50%;" src="{{ profile_image(current_user.username) }}" alt="pfp">
-				<p class="text-end float-end">
-				<a href="settings.php">Edit my profile</a>
-				</p>
-				</li>
-				<li class="list-group-item">From squareBracket</li>
-				</ul>
-			{% else %}
-				  <ul class="list-group list-group-flush">
-					<li class="list-group-item">This is like any other video sharing site... for now at least.</li>
-				  </ul>
-				   <div class="card-footer">
-					<a href="register.php" class="card-link">Get started</a>
-					<a href="login.php" class="card-link">Login</a>
-				  </div>
-			{% endif %}
-					</div>
-					<div class="card" style="border-left: 0;border-top: 0;">
-						<div class="card-header bg-dark text-white">From squareBracket</div>
-						<div class="card-body">
-							{% for video in videos %} 
-								{{ video_box(video) }} 
-							{% else %}
-								<p>No uploaded videos. :^((</p>
-							{% endfor %}
-						</div>
+							<p>No uploaded videos. :^((</p>
+						{% endfor %}
 					</div>
 				</div>
 			</div>
-			<div class="col-xl-3">
+			<div class="col-xl-4">
 					<p><small>Spotlight</small></p>
 					<h5>Welcome to squareBracket!</h5>
 					<p>squareBracket has been rewritten. Remember the old days 
