fix more setting dropdown menu bugs

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -19,7 +19,7 @@
 				});
 				$("#navbarDropdown").click(function(event){
 					event.stopPropagation();
-					$("#mainMenu").addClass("show");
+					$("#themeSelection").removeClass("show");
 				});				
 				$("#back").click(function(event){
 					event.stopPropagation();
