use the svg file on the index page

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -8,9 +8,9 @@
 					  <div class="card-header bg-dark text-white" style="border-top-right-radius: 0;">
 						{% if logged_in %}
 						<div class="d-grid gap-2">
-							<a href="browse.php" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
-	  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
-	</svg> Browse Videos</a>
+							<a href="browse.php" class="btn btn-primary"><svg class="bi" width="16" height="16" fill="currentColor">
+						  <use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#plus-circle-fill"/>
+						</svg> Browse Videos</a>
 						</div>
 						{% else %}
 							Welcome
