--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,51 +1,49 @@
-{% extends "_layout.twig" %} 
-	{% block title %}Home{% endblock%} 
-	{% block precontent %} 
+{% extends "_layout.twig" %}
+	{% block title %}{{ __("Home") }}{% endblock%}
+	{% block precontent %}
 	<div id="frontJumbo" class="p-5 mb-4 bg-purple text-white" style="margin-top:-20px;">
       <div class="container">
 		{% if logged_in %}
 			<div class="row">
 				<div class="col-xl-10">
-					<h1 class="display-5 fw-bold">Hi there, {{ current_user.username }}</h1>
-					<a href="browse.php" class="btn btn-primary btn-lg">Browse</a>
-					<a href="settings.php" class="btn btn-secondary btn-lg">Edit my profile</a>
+					<h1 class="display-5 fw-bold">{{ __("Hi there, %s", [current_user.username]) }}</h1>
+					<a href="browse.php" class="btn btn-primary btn-lg">{{ __("Browse") }}</a>
+					<a href="settings.php" class="btn btn-secondary btn-lg">{{ __("Edit my profile") }}</a>
 				</div>
 				<div class="col-xl-2 text-end">
 					<img class="img-fluid" src="{{ profile_image(current_user.username) }}" alt="pfp">
 				</div>
 			</div>
 		{% else %}
-			<h1 class="display-5 fw-bold">Welcome to squareBracket</h1>
-			<p class="col-xl-8 fs-4">This is like any other video sharing site... for now at least.</p>
+			<h1 class="display-5 fw-bold">{{ __("Welcome to squareBracket") }}</h1>
+			<p class="col-xl-8 fs-4">{{ __("This is like any other video sharing site... for now at least.") }}</p>
 			<p>	<div class="btn-group">
-					<a href="register.php" class="btn btn-primary btn-lg">Get started</a>
-					<a href="login.php" class="btn btn-light btn-lg">Login</a>
+					<a href="register.php" class="btn btn-primary btn-lg">{{ __("Get started") }}</a>
+					<a href="login.php" class="btn btn-light btn-lg">{{ __("Login") }}</a>
 				</div>
 			</p>
 		{% endif %}
       </div>
     </div>
-	{% endblock %} 
+	{% endblock %}
 	{% block content %}
 		<div class="row">
 			<div class="col-xl-8">
 				<div class="card">
-					<div class="card-header bg-dark text-white">From squareBracket</div>
+					<div class="card-header bg-dark text-white">{{ __("From squareBracket") }}</div>
 					<div class="card-body">
-						{% for video in videos %} 
-							{{ video_box(video) }} 
+						{% for video in videos %}
+							{{ video_box(video) }}
 						{% else %}
-							<p>No uploaded videos. :^((</p>
+							<p>{{ __("No uploaded videos. :^((") }}</p>
 						{% endfor %}
 					</div>
 				</div>
 			</div>
 			<div class="col-xl-4">
-					<p><small>Spotlight</small></p>
-					<h5>Welcome to squareBracket!</h5>
-					<p>squareBracket has been rewritten. Remember the old days 
-					of inconsistent UI/CSS and garbage insecure code? That's 
-					in the past.</p>
+					<p><small>{{ __("Spotlight") }}</small></p>
+					<h5>{{ __("Welcome to squareBracket!") }}</h5>
+					<p>{{ __("squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.") }}</p>
 			</div>
 		</div>
 	{% endblock %}
