--- a/templates/components/smallvideobox.twig
+++ b/templates/components/smallvideobox.twig
@@ -11,6 +11,6 @@
 		<p>{{ userlink(data, 'u_') }}</p>
 	</div>
 	<div class="col-12">
-		<p>{{ data.views }} views &bull; {{ data.time | relative_time }}</p>
+		<p>{{ data.views }} {{ __("views") }} &bull; {{ data.time | relative_time }}</p>
 	</div>
 </div>
