--- a/templates/login.twig
+++ b/templates/login.twig
@@ -1,48 +1,51 @@
-{% extends "_layout.twig" %} 
-	{% block title %}Login{% endblock%} 
+{% extends "_layout.twig" %}
+
+{% block title %}{{ __("Login") }}{% endblock %}
+
 	{% block precontent %}
-	<div class="container">
-	<h1>Login to squareBracket</h1>
-	</div>
+<div class="container">
+<h1>{{ __("Login to squareBracket") }}</h1>
+</div>
 	{% endblock %}
+
 	{% block content %}
-		{% if error %} 
-			{% autoescape %} 
-				{{ error | raw }}
-			{% endautoescape %} 
-		{% else %} 
-			{% if not success == '' %} 
-				{% if success %} 
-				{% else %} 
-					{% set text = 'Incorrect username or password!' %} 
-					{% autoescape %} 
-						{{ text | raw }} 
-					{% endautoescape %} 
-				{% endif %} 
-			{% endif %} 
+{% if error %}
+	{% autoescape %}
+		{{ error | raw }}
+	{% endautoescape %}
+{% else %}
+	{% if not success == '' %}
+		{% if success %}
+		{% else %}
+			{{ __("Incorrect username or password!") }}
 		{% endif %}
-		<div class="row">
-		<div class="col-8">
-		<h2>What is squareBracket?</h2>
-		squareBracket is a way to get your videos to the people who matter to you. With squareBracket you can:
+	{% endif %}
+{% endif %}
+
+<div class="row">
+	<div class="col-8">
+		<h2>{{ __("What is squareBracket?") }}</h2>
+		{{ __("squareBracket is a way to get your videos to the people who matter to you. With squareBracket you can:") }}
 		<ul>
-		<li> Show off your favorite videos to the world
-		</li><li> Blog the videos you take with your digital camera or cell phone
-		</li><li> Securely and privately show videos to your friends and family around the world
-		</li><li> ... and much, much more!
-		</li></ul>
-		</div>
-		<div class="col-4">		<form method="post" name="loginForm"
-		id="loginForm" action="login.php">
-			<div class="input-group"> 
-				<span class="input-group-text" id="basic-addon1" style="width:90px">Username</span>
+			<li> {{ __("Show off your favorite videos to the world") }}
+			</li><li> {{ __("Blog the videos you take with your digital camera or cell phone") }}
+			</li><li> {{ __("Securely and privately show videos to your friends and family around the world") }}
+			</li><li> {{ __("... and much, much more!") }}
+			</li>
+		</ul>
+	</div>
+	<div class="col-4">
+		<form method="post" name="loginForm" id="loginForm" action="login.php">
+			<div class="input-group">
+				<span class="input-group-text" id="basic-addon1" style="width:90px">{{ _("Username") }}</span>
 				<input type="text" name="username" class="form-control" aria-describedby="basic-addon1">
 			</div>
-			<div class="input-group"> 
-				<span class="input-group-text" id="basic-addon1" style="width:90px">Password</span>
+			<div class="input-group">
+				<span class="input-group-text" id="basic-addon1" style="width:90px">{{ _("Password") }}</span>
 				<input type="password" name="password" class="form-control" aria-describedby="basic-addon1">
 			</div>
-			<input class="btn btn-primary" type="submit" value="Login" name="loginsubmit">
-		</form></div>
-		</div>
+			<input class="btn btn-primary" type="submit" value="{{ __("Login") }}" name="loginsubmit">
+		</form>
+	</div>
+</div>
 	{% endblock %}
