--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -1,22 +1,23 @@
-{% extends "_layout.twig" %} 
-	{% block title %}User Settings{% endblock%} 
+{% extends "_layout.twig" %}
+
+{% block title %}{{ __("User Settings") }}{% endblock%}
 	{% block content %}
-		<script>
-			$(document).ready(function(){
-				$("#update").click(function(){
-					$.post("settings.php",
-					{
-						description: $.trim($("#description").val()),
-						color: $.trim($("#color").val())
-					},
-					function(data,status){
-						if (status = "success") {
-						}
-					});
-				});
+<script>
+	$(document).ready(function(){
+		$("#update").click(function(){
+			$.post("settings.php",
+			{
+				description: $.trim($("#description").val()),
+				color: $.trim($("#color").val())
+			},
+			function(data,status){
+				if (status = "success") {
+				}
 			});
-		</script>
-		<textarea class="form-control" id="description" name="desc" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="Description"></textarea>
-		<input type="color" class="form-control" id="color" value="">
-		<button id="update" class="btn btn-primary">update</button>
+		});
+	});
+</script>
+<textarea class="form-control" id="description" name="desc" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}"></textarea>
+<input type="color" class="form-control" id="color" value="">
+<button id="update" class="btn btn-primary">{{ __("Update") }}</button>
 	{% endblock %}
