--- a/templates/user.twig
+++ b/templates/user.twig
@@ -1,39 +1,40 @@
 {% extends "_layout.twig" %}
 
-{% block title %}User{% endblock %}
+{% block title %}{{ user.username }}{% endblock %}
 
 	{% block precontent %}
-	<style>
-		{{ profCss | raw }}
-	</style>
-	<div class="p-5 mb-4 bg-custom-profile" style="margin-top:-20px;">
-		<div style="padding:50px;"></div>
-	</div>
+<style>
+	{{ profCss | raw }}
+</style>
+<div class="p-5 mb-4 bg-custom-profile" style="margin-top:-20px;">
+	<div style="padding:50px;"></div>
+</div>
 	{% endblock %}
+
 	{% block content %}
-	<div class="row" style="margin-top:-150px;">
-	<p class="text-white">are you fucking kidding me guys this is literally just the poktube semantic ui profile layout but without the user infomation detail bullshit</p>
-		<div class="p-1 mb-4 col-md-6 col-lg-4 bg-dark rounded-3 text-white">
-			<div class="container-fluid py-5">
-				<div class="row">
-					<div class="col text-center">
-						<img src="{{ profile_image(user.username) }}" width="128" alt="pfp"><h1 class="align-top fw-bold">{{ user.username }}</h1>
-					</div>
+<div class="row" style="margin-top:-150px;">
+<p class="text-white">are you fucking kidding me guys this is literally just the poktube semantic ui profile layout but without the user infomation detail bullshit</p>
+	<div class="p-1 mb-4 col-md-6 col-lg-4 bg-dark rounded-3 text-white">
+		<div class="container-fluid py-5">
+			<div class="row">
+				<div class="col text-center">
+					<img src="{{ profile_image(user.username) }}" width="128" alt="pfp"><h1 class="align-top fw-bold">{{ user.username }}</h1>
 				</div>
-				<p class="col-md-8 fs-4">{{ user.description }}</p>
-				<button class="btn btn-warning btn-lg" type="button">Subscribe</button>
-				<button class="btn btn-secondary btn-lg" type="button">Friend</button>
 			</div>
+			<p class="col-md-8 fs-4">{{ user.description }}</p>
+			<button class="btn btn-warning btn-lg" type="button">{{ __("Subscribe") }}</button>
+			<button class="btn btn-secondary btn-lg" type="button">{{ __("Friend") }}</button>
 		</div>
-		<div class="col-md-6 col-lg-8">
-			<div class="card">
-				<div class="card-body">
-					<div class="caption">
-						<h3>Most recent uploaded video</h3>
-						{{ video_box(latestVideo)}} 
-					</div>
+	</div>
+	<div class="col-md-6 col-lg-8">
+		<div class="card">
+			<div class="card-body">
+				<div class="caption">
+					<h3>{{ __("Most recent uploaded video") }}</h3>
+					{{ video_box(latestVideo)}}
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 	{% endblock %}
