--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -1,89 +1,89 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Video{% endblock %}
+{% block title %}{{ video.title }}{% endblock %}
 
 	{% block content %}
-		<div class="row">
-			<h1>{{ video.title }}</h1>
-			<p>
-			<button class="btn btn-secondary" type="button">[username] (fix it later)</button>
-			<button class="btn btn-warning" type="button">Subscribe</button>
-			</p>
-				<div class="col-lg-9">
-					<div id="playerContainer"></div>
-									<script src="https://cdn.jsdelivr.net/npm/indigo-player@1/lib/indigo-player.js"></script>
-					<script>
-						const config = {
-							autoplay: true,
-							sources: [
-								{
-									type: 'dash',
-									src: '{{ video.videofile }}',
-								}
-							],
-						};
+<div class="row">
+	<h1>{{ video.title }}</h1>
+	<p>
+	<button class="btn btn-secondary" type="button">[username] (fix it later)</button>
+	<button class="btn btn-warning" type="button">{{ __("Subscribe") }}</button>
+	</p>
+	<div class="col-lg-9">
+		<div id="playerContainer"></div>
+		<script src="https://cdn.jsdelivr.net/npm/indigo-player@1/lib/indigo-player.js"></script>
+		<script>
+			const config = {
+				autoplay: true,
+				sources: [
+					{
+						type: 'dash',
+						src: '{{ video.videofile }}',
+					}
+				],
+			};
 
-						const element = document.getElementById('playerContainer');
-						const player = IndigoPlayer.init(element, config);
+			const element = document.getElementById('playerContainer');
+			const player = IndigoPlayer.init(element, config);
 
-						// You can use the player object now to access the player and it's methods (play, pause, ...)
-					</script>
-					<script>
-					$(document).ready(function(){
-					  contents = $.trim($("#commentContents").val());
-					  if (contents === null || contents == "" && $("#post").attr("class") != "btn btn-primary disabled") {
-							$("#post").addClass("disabled");
-					  }
-					  $("#commentContents").keydown(function(e){
-						  if(e.key == "Backspace") {
-							contents = $.trim($("#commentContents").val()).slice(0, -1);;
-						  } else {
-							contents = $.trim($("#commentContents").val()) + e.key;
-						  }
-						  if (contents == "") {
-							$("#post").addClass("disabled");
-						  } else if (contents != "") {
-							$("#post").removeClass("disabled")
-						  }
-					  });
+			// You can use the player object now to access the player and it's methods (play, pause, ...)
+		</script>
+		<script>
+		$(document).ready(function(){
+			contents = $.trim($("#commentContents").val());
+			if (contents === null || contents == "" && $("#post").attr("class") != "btn btn-primary disabled") {
+				$("#post").addClass("disabled");
+			}
+			$("#commentContents").keydown(function(e){
+				if(e.key == "Backspace") {
+				contents = $.trim($("#commentContents").val()).slice(0, -1);;
+				} else {
+				contents = $.trim($("#commentContents").val()) + e.key;
+				}
+				if (contents == "") {
+				$("#post").addClass("disabled");
+				} else if (contents != "") {
+				$("#post").removeClass("disabled")
+				}
+			});
 
-					  $("#post").click(function(){
-						$.post("comment.php",
-						{
-							comment: $.trim($("#commentContents").val()),
-							vidid:  '{{ video.video_id }}'
-						},
-						function(data,status){
-							if (status = "success") {
-								$('#comment').prepend(data);
-								$("#commentContents").val('');
-								$("#post").addClass("disabled");
-							}
-						});
-					  });
-					});
-					</script>
-					<div style="margin-top:5px">{{ watch_box(video) }}</div> <!-- WATCH VIDEO BOX -->
-					<div style="margin-top:5px">
-						<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none"
-						rows="3" placeholder="Enter comment here, Markdown can be used here."></textarea>
-						<div style="margin-top:5px"></div>
-						<button id="post" class="btn btn-primary">Post</button>
-						<div style="margin-top:5px"></div>
-						<div id="comment"></div>
-							{% for comment in comments %} 
-								{{ comment(comment) }}
-							{% endfor %}
-						</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="card border-primary">
-					<div class="card-body">
-						{% for related_video in related_videos %} 
-							{{ small_video_box(related_video)}} 
-						{% endfor %}
-					</div>
-				</div>
+			$("#post").click(function(){
+			$.post("comment.php",
+			{
+				comment: $.trim($("#commentContents").val()),
+				vidid:  '{{ video.video_id }}'
+			},
+			function(data,status){
+				if (status = "success") {
+					$('#comment').prepend(data);
+					$("#commentContents").val('');
+					$("#post").addClass("disabled");
+				}
+			});
+			});
+		});
+		</script>
+		<div style="margin-top:5px">{{ watch_box(video) }}</div> <!-- WATCH VIDEO BOX -->
+		<div style="margin-top:5px">
+			<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none"
+			rows="3" placeholder="Enter comment here, Markdown can be used here."></textarea>
+			<div style="margin-top:5px"></div>
+			<button id="post" class="btn btn-primary">{{ __("Post") }}</button>
+			<div style="margin-top:5px"></div>
+			<div id="comment"></div>
+				{% for comment in comments %}
+					{{ comment(comment) }}
+				{% endfor %}
+		</div>
+	</div>
+	<div class="col-lg-3">
+		<div class="card border-primary">
+			<div class="card-body">
+				{% for related_video in related_videos %}
+					{{ small_video_box(related_video)}}
+				{% endfor %}
 			</div>
 		</div>
+	</div>
+</div>
 	{% endblock %}
