fix some pages not working

--- a/templates/login.twig
+++ b/templates/login.twig
@@ -37,11 +37,11 @@
 	<div class="col-4">
 		<form method="post" name="loginForm" id="loginForm" action="login.php">
 			<div class="input-group">
-				<span class="input-group-text" id="basic-addon1" style="width:90px">{{ _("Username") }}</span>
+				<span class="input-group-text" id="basic-addon1" style="width:90px">{{ __("Username") }}</span>
 				<input type="text" name="username" class="form-control" aria-describedby="basic-addon1">
 			</div>
 			<div class="input-group">
-				<span class="input-group-text" id="basic-addon1" style="width:90px">{{ _("Password") }}</span>
+				<span class="input-group-text" id="basic-addon1" style="width:90px">{{ __("Password") }}</span>
 				<input type="password" name="password" class="form-control" aria-describedby="basic-addon1">
 			</div>
 			<input class="btn btn-primary" type="submit" value="{{ __("Login") }}" name="loginsubmit">
