--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -66,7 +66,7 @@
 		<div style="margin-top:5px">{{ watch_box(video) }}</div> <!-- WATCH VIDEO BOX -->
 		<div style="margin-top:5px">
 			<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none"
-			rows="3" placeholder="Enter comment here, Markdown can be used here."></textarea>
+			rows="3" placeholder="{{ __("Enter comment here, Markdown can be used here.") }}"></textarea>
 			<div style="margin-top:5px"></div>
 			<button id="post" class="btn btn-primary">{{ __("Post") }}</button>
 			<div style="margin-top:5px"></div>
