Add back stuff in login.twig that got lost during the merge, and update translations to reflect new strings.

--- a/templates/login.twig
+++ b/templates/login.twig
@@ -21,20 +21,18 @@
 		{% endif %}
 		<div class="row">
 		<div class="col-8">
-    <!-- TODO: UPDATE THIS AFTER MERGE /ROllerozxa -->
-		<h2>{{ __("What is squareBracket?") }}</h2>
-		{{ __("squareBracket is a way to get your videos to the people who matter to you. With squareBracket you can:") }}
+		{{ __("squareBracket is a website to share your videos to the public. With squareBracket you can:") }}
 		<ul>
 			<li> {{ __("Show off your favorite videos to the world") }}
-			</li><li> {{ __("Blog the videos you take with your digital camera or cell phone") }}
-			</li><li> {{ __("Securely and privately show videos to your friends and family around the world") }}
+			</li><li> {{ __("Post the videos you take with your camera or smartphone") }}
+			</li><li> {{ __("Securely show videos to your friends and family around the world") }}
 			</li><li> {{ __("... and much, much more!") }}
 			</li>
 		</ul>
 		</div>
 		<div class="col-4">		<form method="post" name="loginForm"
 		id="loginForm" action="login.php">
-			<div class="input-group"> 
+			<div class="input-group">
 				<span class="input-group-text" id="basic-addon1" style="width:90px">{{ __("Username") }}</span>
 				<input type="text" name="username" class="form-control" aria-describedby="basic-addon1">
 			</div>
