--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -6,7 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- bootstrap 5, which is just some rendering thing -->
 		<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% endif %}.css" type="text/css">
-        <!-- jquery and bootstrap 3 javascript -->
+        <!-- jquery and bootstrap 5 javascript
+		even though bootstrap 5 claims to no longer support jquery
+		we still need it for the settings dropdown menu
+		-->
 		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 		<script src="vendor/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
