localizing placeholder text is the most useless thing i've ever seen.

--- a/templates/user.twig
+++ b/templates/user.twig
@@ -13,7 +13,7 @@
 
 	{% block content %}
 <div class="row" style="margin-top:-150px;">
-<p class="text-white">{{ __("are you fucking kidding me guys this is literally just the poktube semantic ui profile layout but without the user infomation detail bullshit") }}</p>
+<p class="text-white">are you fucking kidding me guys this is literally just the poktube semantic ui profile layout but without the user infomation detail bullshit</p>
 	<div class="p-1 mb-4 col-md-6 col-lg-4 bg-dark rounded-3 text-white">
 		<div class="container-fluid py-5">
 			<div class="row">
