bad video tag implementation, NEEDS TO BE REDONE!!!!
Signed-off-by: forkiesassds <icanttellyou@memeware.net>

--- a/templates/upload.twig
+++ b/templates/upload.twig
@@ -8,6 +8,7 @@ enctype="multipart/form-data">
 	<input type="text" class="form-control" name="title" value="" placeholder="{{ __("Title") }}">
 	<textarea class="form-control" name="desc" maxlength="500" form="uploadForm"
 	style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}"></textarea>
+	<input type="text" class="form-control" name="tags" value="" placeholder="{{ __("Tags") }}">
 	<input class="form-control" type="file" name="fileToUpload" id="fileToUpload" required>
 	<br>
 	<input class="btn btn-primary" type="submit" id="upload" name="upload"
